log/build_2023-06-04_15-09-51/launcher/stderr.log
  File "/home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher/xacro_urdf.py", line 65
    output="screen"
           ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

